Fix Overlapping Navigation Bar

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -91,10 +91,11 @@ comment-element{
 
 .topnav {
   overflow: hidden;
-  background-color:transparent;
+  background-color: white;
   position: fixed; 
   top: 0; 
   width: 100%; 
+   z-index: 10;
 }
 
 .topnav a {
@@ -134,6 +135,5 @@ input[type=submit]{
   border: none;
   color: white;
 }
-
 
 
